<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_list_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    app:cardCornerRadius="@dimen/card_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/card_layout_padding">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_element_padding"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/fragment_list_example_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_card_comunity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_element_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_card_name"
            tools:text="@string/fragment_list_example_comunity" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_card_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_element_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_card_comunity"
            tools:text="@string/fragment_form_gender_male" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_card_primary_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_element_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/fragment_card_name"
            tools:text="@string/fragment_form_midfield_position" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fragment_card_secondary_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/card_element_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_card_primary_position"
            tools:text="@string/fragment_form_defender_position" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>