<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".alerts.presentation.AlertActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/info_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info_blue_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/info_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/block_margin_top_start"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/info_icon"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/alert_example_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/info_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/block_margin_top_start"
            android:textColor="@color/gray_white"
            app:layout_constraintStart_toEndOf="@id/info_icon"
            app:layout_constraintTop_toBottomOf="@id/info_title_text"
            tools:text="@string/alert_example_date" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/info_body_text"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/info_date_text"
            app:layout_constraintTop_toBottomOf="@id/info_date_text"
            tools:text="@string/alert_example_body" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>