<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/headerview"
        style="@style/HeaderMargins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_netflix_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/HeaderTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/programs"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/HeaderTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/films"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/HeaderTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bodyview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footerview"
        android:layout_below="@id/headerview"
        android:background="@color/gray"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/ImageTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/populars" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image01"
                style="@style/AvatarView"
                tools:src="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image02"
                style="@style/AvatarView"
                android:layout_marginStart="-28dp"
                android:layout_toEndOf="@id/image01"
                tools:src="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image03"
                style="@style/AvatarView"
                android:layout_marginStart="-28dp"
                android:layout_toEndOf="@id/image02"
                tools:src="@tools:sample/avatars" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/ImageTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trends" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image05"
                style="@style/AvatarView"
                tools:src="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image06"
                style="@style/AvatarView"
                android:layout_marginStart="-28dp"
                android:layout_toEndOf="@id/image05"
                tools:src="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image07"
                style="@style/AvatarView"
                android:layout_marginStart="-28dp"
                android:layout_toEndOf="@id/image06"
                tools:src="@tools:sample/avatars" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/ImageTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_again" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image08"
                style="@style/AvatarView"
                tools:src="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image09"
                style="@style/AvatarView"
                android:layout_marginStart="-28dp"
                android:layout_toEndOf="@id/image08"
                tools:src="@tools:sample/avatars" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image10"
                style="@style/AvatarView"
                android:layout_marginStart="-28dp"
                android:layout_toEndOf="@id/image09"
                tools:src="@tools:sample/avatars" />

        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/footerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <androidx.appcompat.widget.AppCompatImageView
            style="@style/FooterImageView"
            android:src="@drawable/ic_home_white_24dp" />

        <androidx.appcompat.widget.AppCompatImageView
            style="@style/FooterImageView"
            android:layout_marginStart="30dp"
            android:src="@drawable/ic_search_white_24dp" />

        <androidx.appcompat.widget.AppCompatImageView
            style="@style/FooterImageView"
            android:layout_marginStart="30dp"
            android:src="@drawable/ic_smart_display_white_24dp" />

        <androidx.appcompat.widget.AppCompatImageView
            style="@style/FooterImageView"
            android:layout_marginStart="30dp"
            android:src="@drawable/ic_file_download_white_24dp" />

        <androidx.appcompat.widget.AppCompatImageView
            style="@style/FooterImageView"
            android:layout_marginStart="30dp"
            android:src="@drawable/ic_menu_black_24dp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>